--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tam Ly's Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +10,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="icon" href="./images/favicon.png" type="image/PNG">
+    <title>Tam Ly's Portfolio</title>
   </head>
+
   <body class="gradient-background light-mode">
     <!-- Header -->
     <section class="header">
@@ -36,24 +38,24 @@
         </header>
       </div>
     </section>
-    <!-- Hero section -->
 
+    <!-- Hero section -->
     <div id="hero" class="container hero" bis_skin_checked="1">
       <div
-        class="row flex-lg-row-reverse align-items-center g-5 py-5"
+        class="row flex-lg-row-reverse align-items-center g-3 py-3"
         bis_skin_checked="1"
       >
-        <div class="col-10 col-sm-8 col-lg-6" bis_skin_checked="1">
+        <div class="col-12 col-sm-6 col-lg-6" bis_skin_checked="1">
           <img
             src="./images/Profile.png"
             class="d-block mx-lg-auto img-fluid"
-            alt="Bootstrap Themes"
+            alt="Profile Picture"
             width="700"
             loading="lazy"
           />
         </div>
 
-        <div class="col-lg-6" bis_skin_checked="1">
+        <div class="col-12 col-sm-6 col-lg-6" bis_skin_checked="1">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
             <span class="hero-text">Hello, I'm </span
             ><span class="name">Tam Ly</span>
@@ -86,6 +88,159 @@
               class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
               bis_skin_checked="1"
             >
+              <!-- A Random Cocktail -->
+              <div class="col" bis_skin_checked="1">
+                <div
+                  class="card shadow-sm my-card gradient-background-1"
+                  bis_skin_checked="1"
+                >
+                  <img
+                    src="./images/project6.png"
+                    height="225"
+                    width="100%"
+                    class="rounded-3 project-img"
+                  />
+                  <div class="card-body" bis_skin_checked="1">
+                    <h3 class="fw-bold text-body-emphasis project-name">
+                      A Random Cocktail
+                    </h3>
+                    <p class="card-text project-card">
+                      A web app that displays random cocktail recipes using an
+                      external API, including ingredients, instructions, and
+                      images.
+                    </p>
+                    <div
+                      class="d-flex flex-wrap gap-2 justify-content-left pt-2 pb-4"
+                      bis_skin_checked="1"
+                    >
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >JavaScript
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >EJS
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >CSS
+                      </span>
+                    </div>
+                    <div
+                      class="d-flex justify-content-between align-items-center"
+                      bis_skin_checked="1"
+                    >
+                      <div class="btn-group" bis_skin_checked="1">
+                        <!-- <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          Detail
+                        </button> -->
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://github.com/TamNganLy/A-Random-Cocktail"
+                            class="nav-link"
+                            >Github</a
+                          >
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://a-random-cocktail.onrender.com/"
+                            class="nav-link"
+                            >Website</a
+                          >
+                        </button>
+                      </div>
+                      <small class="text-body-secondary">October 2025</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Tam's Corner -->
+              <div class="col" bis_skin_checked="1">
+                <div
+                  class="card shadow-sm my-card gradient-background-1"
+                  bis_skin_checked="1"
+                >
+                  <img
+                    src="./images/project7.png"
+                    height="225"
+                    width="100%"
+                    class="rounded-3 project-img"
+                  />
+                  <div class="card-body" bis_skin_checked="1">
+                    <h3 class="fw-bold text-body-emphasis project-name">
+                      Tam's Corner
+                    </h3>
+                    <p class="card-text project-card">
+                      A personal blog website for sharing blog posts and video,
+                      designed as a creative space while learning web
+                      development.
+                    </p>
+                    <div
+                      class="d-flex flex-wrap gap-2 justify-content-left pt-2 pb-4"
+                      bis_skin_checked="1"
+                    >
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >JavaScript
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >EJS
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >CSS
+                      </span>
+                    </div>
+                    <div
+                      class="d-flex justify-content-between align-items-center"
+                      bis_skin_checked="1"
+                    >
+                      <div class="btn-group" bis_skin_checked="1">
+                        <!-- <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          Detail
+                        </button> -->
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://github.com/TamNganLy/Blog-web-application"
+                            class="nav-link"
+                            >Github</a
+                          >
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://tamcorner.onrender.com/"
+                            class="nav-link"
+                            >Website</a
+                          >
+                        </button>
+                      </div>
+                      <small class="text-body-secondary">September 2025</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- SOP Website -->
               <div class="col" bis_skin_checked="1">
                 <div
                   class="card shadow-sm my-card gradient-background-1"
@@ -128,12 +283,12 @@
                       bis_skin_checked="1"
                     >
                       <div class="btn-group" bis_skin_checked="1">
-                        <button
+                        <!-- <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
                         >
                           Detail
-                        </button>
+                        </button> -->
                         <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
@@ -150,6 +305,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- KeyLink -->
               <div class="col" bis_skin_checked="1">
                 <div
                   class="card shadow-sm my-card gradient-background-1"
@@ -191,12 +348,12 @@
                       bis_skin_checked="1"
                     >
                       <div class="btn-group" bis_skin_checked="1">
-                        <button
+                        <!-- <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
                         >
                           Detail
-                        </button>
+                        </button> -->
                         <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
@@ -213,6 +370,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- PDF-to-Excel -->
               <div class="col" bis_skin_checked="1">
                 <div
                   class="card shadow-sm my-card gradient-background-1"
@@ -247,12 +406,12 @@
                       bis_skin_checked="1"
                     >
                       <div class="btn-group" bis_skin_checked="1">
-                        <button
+                        <!-- <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
                         >
                           Detail
-                        </button>
+                        </button> -->
                         <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
@@ -269,6 +428,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- Youtube Clone -->
               <div class="col" bis_skin_checked="1">
                 <div
                   class="card shadow-sm my-card gradient-background-1"
@@ -310,12 +471,12 @@
                       bis_skin_checked="1"
                     >
                       <div class="btn-group" bis_skin_checked="1">
-                        <button
+                        <!-- <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
                         >
                           Detail
-                        </button>
+                        </button> -->
                         <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
@@ -342,6 +503,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- Mancala Game -->
               <div class="col" bis_skin_checked="1">
                 <div
                   class="card shadow-sm my-card gradient-background-1"
@@ -379,12 +542,12 @@
                       bis_skin_checked="1"
                     >
                       <div class="btn-group" bis_skin_checked="1">
-                        <button
+                        <!-- <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
                         >
                           Detail
-                        </button>
+                        </button> -->
                         <button
                           type="button"
                           class="btn btn-sm btn-outline-secondary"
