add live demo link for SOP

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                           <a
                             href="https://a-random-cocktail.onrender.com/"
                             class="nav-link"
-                            >Website</a
+                            >Live Demo</a
                           >
                         </button>
                       </div>
@@ -230,7 +230,7 @@
                           <a
                             href="https://tamcorner.onrender.com/"
                             class="nav-link"
-                            >Website</a
+                            >Live Demo</a
                           >
                         </button>
                       </div>
@@ -297,6 +297,16 @@
                             href="https://github.com/TamNganLy/sop-web-app"
                             class="nav-link"
                             >Github</a
+                          >
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://sop-web-app.vercel.app/"
+                            class="nav-link"
+                            >Live Demo</a
                           >
                         </button>
                       </div>
@@ -494,7 +504,7 @@
                           <a
                             href="https://tamnganly.github.io/TamLy-YouTube-Clone/"
                             class="nav-link"
-                            >Website</a
+                            >Live Demo</a
                           >
                         </button>
                       </div>
