update project-8 [my bookstore]

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       >
         <div class="col-12 col-sm-6 col-lg-6" bis_skin_checked="1">
           <img
-            src="./images/Profile.png"
+            src="./images/Profile-1.png"
             class="d-block mx-lg-auto img-fluid"
             alt="Profile Picture"
             width="700"
@@ -88,6 +88,84 @@
               class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
               bis_skin_checked="1"
             >
+              <!-- Tam's Bookstore -->
+              <div class="col" bis_skin_checked="1">
+                <div
+                  class="card shadow-sm my-card gradient-background-1"
+                  bis_skin_checked="1"
+                >
+                  <img
+                    src="./images/project8.jpg"
+                    height="225"
+                    width="100%"
+                    class="rounded-3 project-img"
+                  />
+                  <div class="card-body" bis_skin_checked="1">
+                    <h3 class="fw-bold text-body-emphasis project-name">
+                      Tam's Bookstore
+                    </h3>
+                    <p class="card-text project-card">
+                      A full-stack Book Management Web App displaying books' info and reviews, featuring CRUD operations, search, and genre filtering.
+                    </p>
+                    <div
+                      class="d-flex flex-wrap gap-2 justify-content-left pt-2 pb-4"
+                      bis_skin_checked="1"
+                    >
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >JavaScript
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >EJS
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >Node.js
+                      </span>
+                      <span
+                        class="badge d-flex align-items-center p-1 rounded-pill tech-skill-container"
+                        >PostgreSQL
+                      </span>
+                    </div>
+                    <div
+                      class="d-flex justify-content-between align-items-center"
+                      bis_skin_checked="1"
+                    >
+                      <div class="btn-group" bis_skin_checked="1">
+                        <!-- <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          Detail
+                        </button> -->
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://github.com/TamNganLy/my-book-store"
+                            class="nav-link"
+                            >Github</a
+                          >
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-outline-secondary"
+                        >
+                          <a
+                            href="https://my-book-store-h44q.onrender.com/"
+                            class="nav-link"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                      <small class="text-body-secondary">November 2025</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- A Random Cocktail -->
               <div class="col" bis_skin_checked="1">
                 <div
